WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
59775
Mask placement on composited layer is incorrect sometimes
https://bugs.webkit.org/show_bug.cgi?id=59775
Summary
Mask placement on composited layer is incorrect sometimes
Simon Fraser (smfr)
Reported
2011-04-28 21:52:49 PDT
Under certain conditions the mask placement on a composited layer is incorrect.
Attachments
Patch
(6.59 KB, patch)
2011-04-28 22:14 PDT
,
Simon Fraser (smfr)
mitz: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2011-04-28 22:14:25 PDT
Created
attachment 91634
[details]
Patch
Simon Fraser (smfr)
Comment 2
2011-04-28 22:19:27 PDT
http://trac.webkit.org/changeset/85303
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug